styles/styles.css
input:-webkit-autofill
{
 -webkit-text-fill-color: white;
 background-clip: text;


}

.heading-talk {
    color: #8c96a5;
    margin-left: 200px;
  }
  .heading-card {
    width: 80%;
    text-align: center;
  
  }
  .product-card {
    border:  #ffba00 solid 3px;
    border-bottom:  #ffba00 solid 0px;
    margin:10px;
    color: #131519;
    
    
  }
  .product-grid{
    /* background: linear-gradient(#131519 70%,#131519, #ffba00 ); */
    background-image: url(../img/steps.svg);
    width: 80%;
    height: auto;
    margin-top: 50px;
    border: 3px solid  #ffba00;
    background-size: contain;
    
  
  }
  .carousel-card {
    background-color: #131519;
  }
  
  .faqs-accordion {
    background-color: rgba(0, 0, 0, 0);
    
    border-left: 2px solid #ffba00;
    border-top: 2px solid #ffba00;
    border-bottom: 2px solid #ffba00;
    margin-bottom: 30px;
    width: 90%;
   
    
  }
  .steps {
    background-color:rgba(0, 0, 0, 0) ;
    width: 95%;
  
    
  }
  .plans-icon {
    color: linear-gradient(#ffba00 29%,#ffba00 50%,rgb(138,35,135) );
  }
  .charts-image {
    background-image: url(../img/charts.jpg);
    height: 100%;
    background-size: cover;
  }
  .crypto-backdrop {
    background-color: rgba(0, 0, 0, 0.3);
    padding: 20px;
    height: 100%;
  }
  
  .card-content {
    background-color: rgba(0, 0, 0, 0);
  }
  .signup {
    background-image: url(../img/event4.jpg);
    height:auto;
    background-repeat: no-repeat;
    width:100%;
    border-radius: 10px;
    margin-top: 40px;
    background-size: contain;
  }
  .app-input {
    background-color: rgba(0, 0, 0, 0);
    color: white;
    border-bottom: 1px #ffab00 solid;
    width: 100%;
    
   
  }
  .second-input {
    margin-top: 40px;
    margin-bottom: 40px;
  }
  ::placeholder {
    color: white;
    border:none;
    text-align: center;
   
    
  }
  .button {
    border: 3px #ffab00 solid;
    height: 40px;
    width: 110px;
    border-radius: 7px;
    
  }
  .dashboard-options{
    border: #ffab00 3px solid;
    border-left: 0px;
    background-color: black;
    margin-top: 30px;
  }
  .profile-paper {
    margin-top: 25px;
    border: 3px solid #ffab00;
   background-color: black;
    background-image: linear-gradient(black 80%,black);
    /* background-image: url(../img/steps.svg); */
    
    height: auto;
    padding: 10px;
  
    
  }
  .profile-image {
    border-radius: 100px;
  }
  .container-p {
    margin-top: 100px;
  }
  .deposit-paper {
   
    padding: 30px;
  }
  .react-crypto-compare-currency {
    color:#ffab00;
  }
  ::-webkit-textfield-decoration-container {
    background-color: rgba(0, 0, 0, 0);
  }
  
  .dollar-sign {
    margin-left: 30;
    margin-right: 10px;
  }
  .balance-value {
    font-size: 35px;
    margin-left: 10px;
  }
  .success-paper {
    margin-top: 100px;
    width: 90%;
    background-image: linear-gradient(black 90%,black);
    background-color: black;
    height: auto;
    padding: 10px;
  
    
  }


  .username-input {
    margin-top: 40px;
  }
  .country-input {
    margin-bottom: 30px;
    margin-left: 32px;
    margin-top: 10px;
  }
  
  .dashboard-chart {
    width: 100%;
    height: 110px
  }
  .crypto-dashboard {
    margin-top:30px;
    margin-bottom: 70px;
  }
  
  
  .step-icon {
    width: 60px;
    height: 60px;
    color:#ffab00;
  }
  .market-overview {
    width: 95%;
  }
  .index-head {
    padding: 30px;
    text-align: center;
    
  }
  .drawer {
    height: 400px;
  }
  .deposit-selector {
    border: 3px solid #ffab00;
    display: grid;
    place-items: center;
    border-radius: 40px;
    width: 70px;
    height: 70px;
  }
  
  .drawer-container {
    display: flex;
    flex-direction: row;
    height: 100%;
    overflow: hidden;
  }
   
  .drawer-app-content {
    flex: auto;
    overflow: auto;
    
    
  }
  .coin-icon {
    width: 50px;
    height: 50px;
  }
  .top-row {
    display: grid;
    place-items: center;
    /* background-color: black; */
  }
  .top-balance {
    margin-left: 30px;
    
  }
  .alpha-heading {
    margin-top: 70px;
    background-image: url(../img/bg-help.png);
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
  }
  .choose-icon {
    width: 100px;
    height: 100px;
    color: #ffab00;
  }
  .choose-heading {
    margin-bottom: 20px;
  }
  .security {
    margin-top: 60px;
  }
  .getting-started-header {
    margin-bottom: 40px;
  }
  .access-para {
    padding: 40px;
  }
  .crypto-heading {
    margin-bottom: 20px;
  }
  .charts-image-container {
    margin-top: 20px;
    height: 400px;
  }
  .affili {
    padding:20px;
    background-color: #131519;
    padding-bottom: 40px;
    height: 600px;
  }
  .reset-paper {
    width: 90%;
    height: 450px;
    background-image: url(../img/event4.jpg);
    
    background-repeat: no-repeat;
    
    border-radius: 10px;
    margin-top: 40px;
    background-size: cover;
  }
  
  .reset-input {
    margin-bottom: 50px;
  }
  .security-paper {
    margin: 30px;
  }
  .price-valu {
    color: #ffab00;
    font-size: x-large;
    font-weight: 400;
  }
  
  .table-row {
    background-color: black;
  }
  
  .main-paper {
  
    background-color: #131519;
   color: white;
    height: auto;
    box-shadow: 5px 5px #ffba00;
    
  }
  
  .world {
    background-image: url(../img/world.jpg);
    background-size: contain;
    background-repeat: no-repeat;
    height: 550px;
    width: 100%
  }


  .main-footer {
    font-size: 15px;
    text-align: left;
    background-color: rgba(0, 0, 0, 0);
    text-decoration: none;
    padding: 10px;
  }
  .main-logo {
    height: 100px;
    width: 100px;
  }
  
  .contact {
    width: 90%;
    height: 100%;
    background-image: url(../img/event4.jpg);
    background-color: rgba(0, 0, 0, 0.5);
    background-repeat: no-repeat;
    display: grid;
    border-radius: 10px;
    margin-top: 40px;
    background-size: cover;
  }
/* ... */

